--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="area-total">
             <div id="titulo">
                 <span>
-					<h1>Snake Game by Sammy Freitas</h1>
+					<h2>Snake Game by Sammy Freitas</h2>
+                    <strong>Bootcamp TQI Fullstack Developer - DIO</strong>
 				</span>
             </div>
 
